<resources>
    <string name="app_name">Hataridonaplo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="testsuly">Testsuly:</string>
    <string name="hozzaad">Hozzaad</string>
    <string name="tests_ly">Testsúly</string>
    <string name="kaja">Kaja</string>
    <string name="teend">Teendő</string>
    <string name="calories">Calories</string>
    <string name="protein">Protein</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="hozz_ad">Hozzáad</string>
    <string name="valassz_datumot">Valassz datumot!</string>

    <string-array name="categories">
        <item>Testsuly</item>
        <item>Kaloriaszam</item>
    </string-array>

    <string-array name="periods">
        <item>1 hónap</item>
        <item>1 hét</item>
    </string-array>
</resources>