<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_dialog_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="9"
    tools:context=".fragments.AddDialogFragment">

    <Button
        android:id="@+id/btnWeight"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/tests_ly" />
    <Button
        android:id="@+id/btnFood"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/kaja" />
    <Button
        android:id="@+id/btnTask"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/teend" />

</LinearLayout>